--- a/classStructArray.vcxproj
+++ b/classStructArray.vcxproj
@@ -16,6 +16,7 @@
     <ProjectGuid>{eff8a5dc-031d-4536-9db5-7c4c6a522446}</ProjectGuid>
     <RootNamespace>classStructArray</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>STG</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
